--- a/coding/assignment.html
+++ b/coding/assignment.html
@@ -9,14 +9,14 @@
     <h1>Cousera Assignment</h1>
     <p><b>For this assignment</b>For this assignment you will be grading the submission of your peers and they will be <em>grading</em> your work as well. Please note that you must get this COMPLETELY correct to receive credit. You will get frustrated. You will put in silly mistakes. But hang in there. And don't forget to reach out for help if you need it.</p>
     <h3> If you'all want to see my full work, here is <a href="https://stoyefolio.framer.website/">My Portfolio</a></h3>
-    <img src="/images/mydesign.jpg" alt="My Protfolio Design" width="750" height="500">
+    <img src="images/mydesign.jpg" alt="My Protfolio Design" width="750" height="500">
     <ul>
         <li>Cousera</li>
         <li>Certificate</li>
         <li>Learning</li>
         <li>Mastering</li>
     </ul>
-    <img src="/images/mydesign2.jpg" alt="My Protfolio Design 2" width="750" height="500">
+    <img src="images/mydesign2.jpg" alt="My Protfolio Design 2" width="750" height="500">
     <P>List of images in this files are</P>
         <ol>
             <li>My Design</li>
@@ -24,7 +24,7 @@
             <li>My Design 3</li>
             <li>My Design 4</li>
         </ol>
-    <img src="/images/mydesign3.jpg" alt="My Protfolio Design">
-    <img src="/images/mydesign4.jpg" alt="My Protfolio Design" width="750" height="500">
+    <img src="images/mydesign3.jpg" alt="My Protfolio Design">
+    <img src="images/mydesign4.jpg" alt="My Protfolio Design" width="750" height="500">
 </body>
 </html>
